[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.10.2", features = [] }
itertools = { version = "0.12.0", features = [] }
array2d = "0.3.0"
euclid = "0.22.9"
linked-hash-map = "0.5.6"